--- a/custom_contacts/views/res_partner_views.xml
+++ b/custom_contacts/views/res_partner_views.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='vat']" position="after">
                 <field name="commodity_id" widget="many2many_tags"/>
+                <field name="duns_number"/>
             </xpath>
          </field>
     </record>
