--- a/custom_contacts/views/res_partner_views.xml
+++ b/custom_contacts/views/res_partner_views.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="res_part_inherit_form" model="ir.ui.view">
-        <field name="name">res.partner.form</field>
-        <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.view_partner_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='vat']" position="after">
-                <field name="commodity_id" widget="many2many_tags"/>
-                <field name="duns_number"/>
-            </xpath>
-         </field>
-    </record>
+	<record id="res_part_inherit_form" model="ir.ui.view">
+		<field name="name">res.partner.form</field>
+		<field name="model">res.partner</field>
+		<field name="inherit_id" ref="base.view_partner_form"/>
+		<field name="arch" type="xml">
+			<xpath expr="//form/sheet" position="before">
+				<button name="send_nda" type="object" class="oe_highlight" string="Send NDA mail" attrs="{'invisible': [('is_mail_send', '=', True)]}"/>
+			</xpath>
+			<xpath expr="//field[@name='vat']" position="after">
+				<field name="commodity_id" widget="many2many_tags"/>
+				<field name="duns_number"/>
+				<field name="is_mail_send"/>
+				<field name="nda"/>
+			</xpath>
+		 </field>
+	</record>
 
-    <record id="inherit_view_partner_property_form" model="ir.ui.view">
-        <field name="name">res.partner.form</field>
-        <field name="model">res.partner</field>
-        <field name="inherit_id" ref="account.view_partner_property_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='property_account_position_id']" position="after">
-                <field name="financial_rating"/>
-            </xpath>
-         </field>
-    </record>
+	<record id="inherit_view_partner_property_form" model="ir.ui.view">
+		<field name="name">res.partner.form</field>
+		<field name="model">res.partner</field>
+		<field name="inherit_id" ref="account.view_partner_property_form"/>
+		<field name="arch" type="xml">
+			<xpath expr="//field[@name='property_account_position_id']" position="after">
+				<field name="financial_rating"/>
+			</xpath>
+		 </field>
+	</record>
 </odoo>
