--- a/jungo_purchase/views/bulk_po.xml
+++ b/jungo_purchase/views/bulk_po.xml
@@ -99,4 +99,15 @@
 	<menuitem id="menu_bulk_po" name="Bulk Purchase Order"
 			parent="purchase.menu_procurement_management"
 			action="action_bulk_po" sequence="16"/>
+
+	<!-- Server action/ button in Action -->
+	<record id="model_po_action_RFQ_sent" model="ir.actions.server">
+		<field name="name">Send RFQ mail</field>
+		<field name="model_id" ref="purchase.model_purchase_order"/>
+		<field name="binding_model_id" ref="purchase.model_purchase_order"/>
+		<field name="binding_view_types">form,list</field>
+		<field name="state">code</field>
+		<field name="code">action = records.send_rfq()</field>
+	</record>
+
 </odoo>
